welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: identifier expected but integer literal found.
		if (speed:Int < 66)
                                ^caughtSpeeding:12: error: ')' expected but '}' found.
	}
        ^